--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,11 @@ repositories {
 }
 
 dependencies {
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+	implementation 'junit:junit:4.12'
+	implementation 'junit:junit:4.12'
+	implementation 'junit:junit:4.12'
+    implementation 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
 	testRuntimeOnly'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 	testImplementation 'org.assertj:assertj-core:3.11.1'
 	testImplementation 'org.hamcrest:hamcrest:2.2'
